updated linux edge with examples

--- a/labs/linux_at_the_edge/1.md
+++ b/labs/linux_at_the_edge/1.md
@@ -40,6 +40,7 @@ Once connected via software VPN the developer can access the lab's devices using
 - Username: cisco
 - Password: cisco_1234!
 
+Enter the configuration terminal mode and enable iox.
 
 ```
 device-xe#conf t
@@ -49,6 +50,7 @@ device-xe(config)#exit
 ```
 IOx takes upto two minutesto start. CAF, IOXman,and Libirtd services must be running to enable GuestShell successfully (IOx service (HA) may not run)
 
+Once this as been enabled we can view this - the 'show iox-service' command will display the status of the IOx service.
 
 ```
 device-xe#sh iox-service
