--- a/labs/linux_at_the_edge/2.md
+++ b/labs/linux_at_the_edge/2.md
@@ -1,7 +1,9 @@
 ## Setting up the Guest Shell
 
-Start by creating a virtual port group which enters virtual port group interface configuration mode. This is only Valid on 
+Start by creating a virtual port group (VPG) which enters virtual port group interface configuration mode. This is only Valid on 
 routing platforms only and ussed to provide network connectivity to Guest Shell container.
+
+Enter the configuration terminal and create a Virtual Port Group. When using Virtual Port Groups (VPGs) for front panel networking, the VPG must beconfigured first. We give this an IP address and subnet mask as we would any other type of interface.
 
 ```
 device-xe#conf t
@@ -65,9 +67,3 @@ guestshell destroy
 ```
 The 'guestshell destroy' command removes the rootfs from the flash filesystem. If you decide to re-enable the container in future, 
 the system will build it as a new one with default configuration.
-
-
-
-
-
-
