--- a/labs/linux_at_the_edge/4.md
+++ b/labs/linux_at_the_edge/4.md
@@ -4,7 +4,7 @@ From the bash you can run Cisco CLI commands vai the 'dohost' command built into
 valid configuration exec commands and issues them to the host network element. The dohost' is limited to exec privilege commands.
 
 The following example shows the usage of the dohost command, when invoking the 'dohost' command each 
-command may be in single or double quote.
+command may be in single or double quote. Here we issue a command to show the status of our routers interfaces and check our logs using the pipe charater to see if we have any logs for DCHP.
 
 
 ```
@@ -23,7 +23,7 @@ VirtualPortGroup0      192.168.35.1    YES manual up                    up
 
 The CLI commands can also be chained togther using the pipe charater as you can see above.
 
-Lets add some add some loopback interfaces from the guestshell
+Lets add some add some loopback interfaces from the guestshell, check the router logs and confirm these have been applied.
 
 ```
 [guestshell@guestshell ~]$for x in {1..3}; do dohost "conf t ; interface l$x ; ip address 10.1.0.$x 255.255.255.255" ; done
@@ -46,22 +46,63 @@ Loopback3              10.1.0.3        YES manual up                    up
 
 ![](/posts/files/linux_at_the_edge/images/install_yum_git.jpg)
 
-An example of installation of an rpm using yum
+Here is an example of installation of an rpm using yum. Go ahead and install the GIT application to our router, To double-check that it is working correctly, try running Git's built-in version check.
 
 ```
 [guestshell@guestshell ~]$ sudo yum install git
 Loaded plugins: fastestmirror
-=====================================================================================================================
- Package                              Arch                 Version                          Repository          Size
-=====================================================================================================================
-Installing:
- git                                  x86_64               1.8.3.1-6.el7_2.1                base               4.4 M
+Loading mirror speeds from cached hostfile
+ * base: mirrors.coreix.net
+ * extras: mirrors.coreix.net
+ * updates: mirrors.coreix.net
+Resolving Dependencies
+--> Running transaction check
+---> Package git.x86_64 0:1.8.3.1-12.el7_4 will be reinstalled
+--> Finished Dependency Resolution
+
+Dependencies Resolved
+
+======================================================================================================
+ Package           Arch                 Version                           Repository             Size
+======================================================================================================
+Reinstalling:
+ git               x86_64               1.8.3.1-12.el7_4                  updates               4.4 M
+
+Transaction Summary
+======================================================================================================
+Reinstall  1 Package
+
+Total download size: 4.4 M
+Installed size: 22 M
+Is this ok [y/d/N]: y
+Downloading packages:
+git-1.8.3.1-12.el7_4.x86_64.rpm                                                | 4.4 MB  00:00:01
+Running transaction check
+Running transaction test
+Transaction test succeeded
+Running transaction
+  Installing : git-1.8.3.1-12.el7_4.x86_64                                                        1/1
+  Verifying  : git-1.8.3.1-12.el7_4.x86_64                                                        1/1
 
 Installed:
-  git.x86_64 0:1.8.3.1-6.el7_2.1
+  git.x86_64 0:1.8.3.1-12.el7_4
 
 Complete!
+```
+```
 [guestshell@guestshell ~]$ git –version
 git version 1.8.3.1
 ````
 
+If a package is already installed, when you try and installed this you will be prompted that this is already installed.
+
+```
+[guestshell@guestshell ~]$ sudo yum install git
+Loaded plugins: fastestmirror
+Loading mirror speeds from cached hostfile
+ * base: mirrors.coreix.net
+ * extras: mirrors.coreix.net
+ * updates: mirrors.coreix.net
+Package git-1.8.3.1-12.el7_4.x86_64 already installed and latest version
+Nothing to do
+```
