--- a/labs/linux_at_the_edge/5.md
+++ b/labs/linux_at_the_edge/5.md
@@ -1,16 +1,55 @@
 ## Installing and running Applications
 
 Running troubleshooting commands from the guest shell.
+From the GuestShell you can install applcations and utilities to diagnose network issues.
 
 - MTR – Combines ping and traceroute. 
-- tcpdump – well known Linux packet analyzer
+- tcpdump – Well known Linux packet analyzer
 - Custom Python Applications
 - Launch Guest Shell apps from Embedded Event Manager applets
 
-Install mtr via yum, note you have to be at 'root' level to be able to install this.
+Now install mtr via yum, note you have to be at 'root' level to be able to install this. Once
 
 ```
 [guestshell@guestshell ~]$ sudo yum install mtr
+Loaded plugins: fastestmirror
+Loading mirror speeds from cached hostfile
+ * base: mirrors.coreix.net
+ * extras: mirrors.coreix.net
+ * updates: mirrors.coreix.net
+Resolving Dependencies
+--> Running transaction check
+---> Package mtr.x86_64 2:0.85-7.el7 will be installed
+--> Finished Dependency Resolution
+
+Dependencies Resolved
+
+======================================================================================================
+ Package             Arch                   Version                        Repository            Size
+======================================================================================================
+Installing:
+ mtr                 x86_64                 2:0.85-7.el7                   base                  71 k
+
+Transaction Summary
+======================================================================================================
+Install  1 Package
+
+Total download size: 71 k
+Installed size: 128 k
+Is this ok [y/d/N]: y
+Downloading packages:
+mtr-0.85-7.el7.x86_64.rpm                                                      |  71 kB  00:00:00
+Running transaction check
+Running transaction test
+Transaction test succeeded
+Running transaction
+  Installing : 2:mtr-0.85-7.el7.x86_64                                                            1/1
+  Verifying  : 2:mtr-0.85-7.el7.x86_64                                                            1/1
+
+Installed:
+  mtr.x86_64 2:0.85-7.el7
+
+Complete!
 ```
 ```
 [guestshell@guestshell ~]$sudo mtr 8.8.8.8
