--- a/labs/linux_at_the_edge/3.md
+++ b/labs/linux_at_the_edge/3.md
@@ -1,7 +1,12 @@
 ## Accessing and Using Guest Shell
 
 Now we have enabled the Guest Shell we can access your guestshell and sudo to root permissions. 
-Linux commands can be run directly from the IOS CLI
+Linux commands can be run directly from the IOS CLI 
+
+The 'guestshell run' executes or runs a Linux programin the Guest Shell
+```
+guestshellrun *linux-executable*
+```
 
 ```
 device-xe#guestshell run ?
@@ -11,6 +16,7 @@ device-xe#guestshell run
 device-xe#guestshell run pwd
 /home/guestshell
 ```
+Here we can run bash, the following starts a Bash shell to access the GuestShell. From here we can run bash commands such as 'ls' (list) and ping.
 
 ```
 device-xe#guestshell run bash
@@ -33,15 +39,45 @@ The following example displays system statistics:
 ```
 [guestshell@guestshell ~]$ cat /proc/meminfo
 MemTotal:        8057748 kB
-MemFree:         3084148 kB
-Buffers:          285148 kB
-Cached:          3045892 kB
+MemFree:         3023540 kB
+Buffers:          290228 kB
+Cached:          3079384 kB
 SwapCached:            0 kB
-Active:          2414928 kB
-Inactive:        2178092 kB
-Active(anon):    1292092 kB
-Inactive(anon):   113640 kB
-[removed for brevity]
+Active:          2451280 kB
+Inactive:        2197268 kB
+Active(anon):    1309288 kB
+Inactive(anon):   114792 kB
+Active(file):    1141992 kB
+Inactive(file):  2082476 kB
+Unevictable:           0 kB
+Mlocked:               0 kB
+SwapTotal:             0 kB
+SwapFree:              0 kB
+Dirty:               288 kB
+Writeback:             0 kB
+AnonPages:       1278984 kB
+Mapped:           814776 kB
+Shmem:            145144 kB
+Slab:             201752 kB
+SReclaimable:     130688 kB
+SUnreclaim:        71064 kB
+KernelStack:        2776 kB
+PageTables:        54816 kB
+NFS_Unstable:          0 kB
+Bounce:                0 kB
+WritebackTmp:          0 kB
+CommitLimit:     4028872 kB
+Committed_AS:    5530084 kB
+VmallocTotal:   34359738367 kB
+VmallocUsed:      532968 kB
+VmallocChunk:   34359199228 kB
+HugePages_Total:       0
+HugePages_Free:        0
+HugePages_Rsvd:        0
+HugePages_Surp:        0
+Hugepagesize:       2048 kB
+DirectMap4k:       15964 kB
+DirectMap2M:     8331264 kB
 ```
 The Linux environment can be customized by editing .bashrc or .bash_profile
 
@@ -50,7 +86,7 @@ The Linux environment can be customized by editing .bashrc or .bash_profile
 - NX-OS must explicitly configure within /etc/resolv.conf
 - Any required proxies must be configured on both IOS XE and NX-OS
 
-The followingis a sample DNS configuration for Guest Shell:
+This is how you would configured a DNS configuration for Guest Shell:
 ```
 [guestshell@guestshell~]$ cat/etc/resolv.conf
 nameserver 192.0.2.1
