update python edge md

--- a/labs/python_at_the_edge/1.md
+++ b/labs/python_at_the_edge/1.md
@@ -36,10 +36,47 @@ The below table shows the Guest Shell capabilitiesand the supported Cisco platfo
 device-xe#guestshell enable virtualPortGroup 0 guest-ip 192.168.35.2 name-server 208.67.222.222
 ```
 
-2. “git” installed within Guest Shell
+2. “git” installed within GuestShell (if you enabled this in the Linux at the egde lab skip this or confirm git is installed with git --version)
 ```
-devce-xe#guestshell run bash
 [guestshell@guestshell ~]$ sudo yum install git
+Loaded plugins: fastestmirror
+Loading mirror speeds from cached hostfile
+ * base: mirrors.coreix.net
+ * extras: mirrors.coreix.net
+ * updates: mirrors.coreix.net
+Resolving Dependencies
+--> Running transaction check
+---> Package git.x86_64 0:1.8.3.1-12.el7_4 will be reinstalled
+--> Finished Dependency Resolution
+
+Dependencies Resolved
+
+======================================================================================================
+ Package           Arch                 Version                           Repository             Size
+======================================================================================================
+Reinstalling:
+ git               x86_64               1.8.3.1-12.el7_4                  updates               4.4 M
+
+Transaction Summary
+======================================================================================================
+Reinstall  1 Package
+
+Total download size: 4.4 M
+Installed size: 22 M
+Is this ok [y/d/N]: y
+Downloading packages:
+git-1.8.3.1-12.el7_4.x86_64.rpm                                                | 4.4 MB  00:00:01
+Running transaction check
+Running transaction test
+Transaction test succeeded
+Running transaction
+  Installing : git-1.8.3.1-12.el7_4.x86_64                                                        1/1
+  Verifying  : git-1.8.3.1-12.el7_4.x86_64                                                        1/1
+
+Installed:
+  git.x86_64 0:1.8.3.1-12.el7_4
+
+Complete!
 ```
 
 3. Code repo for lab cloned down
