updated python edge md

--- a/labs/python_at_the_edge/3.md
+++ b/labs/python_at_the_edge/3.md
@@ -1,17 +1,35 @@
 ## Installing and Running Python Libraries
 
-When installing python libraries, these are instaled in the same way you would normally install a python libary using pip (package manager). Some of the below installation have been omiited for brevity purposes.
+When installing python libraries in GuestShell they are instaled in the same way you would normally install a python libary using pip (package manager). Here lets enter the bash shell access to the guestshell and install requests (http://docs.python-requests.org/en/master/)
+
+Start a Bash shell to access the GuestShell and from root install requests.
 
 ```
 device-xe#guestshell run bash
 
 [guestshell@guestshell ~]$ sudo pip install requests
 Collecting requests
-.
-.
+/usr/lib/python2.7/site-packages/pip-8.1.2-py2.7.egg/pip/_vendor/requests/packages/urllib3/util/ssl_.py:318: SNIMissingWarning: An HTTPS request has been made, but the SNI (Subject Name Indication) extension to TLS is not available on this platform. This may cause the server to present an incorrect TLS certificate, which can cause validation failures. You can upgrade to a newer version of Python to solve this. For more information, see https://urllib3.readthedocs.org/en/latest/security.html#snimissingwarning.
+/usr/lib/python2.7/site-packages/pip-8.1.2-py2.7.egg/pip/_vendor/requests/packages/urllib3/util/ssl_.py:122: InsecurePlatformWarning: A true SSLContext object is not available. This prevents urllib3 from configuring SSL appropriately and may cause certain SSL connections to fail. You can upgrade to a newer version of Python to solve this. For more information, see https://urllib3.readthedocs.org/en/latest/security.html#insecureplatformwarning.
+  Downloading requests-2.18.4-py2.py3-none-any.whl (88kB)
+    100% |################################| 92kB 1.0MB/s
+Collecting chardet<3.1.0,>=3.0.2 (from requests)
+  Downloading chardet-3.0.4-py2.py3-none-any.whl (133kB)
+    100% |################################| 143kB 2.0MB/s
+Collecting certifi>=2017.4.17 (from requests)
+  Downloading certifi-2017.11.5-py2.py3-none-any.whl (330kB)
+    100% |################################| 337kB 1.4MB/s
+Collecting urllib3<1.23,>=1.21.1 (from requests)
+  Downloading urllib3-1.22-py2.py3-none-any.whl (132kB)
+    100% |################################| 133kB 4.6MB/s
+Collecting idna<2.7,>=2.5 (from requests)
+  Downloading idna-2.6-py2.py3-none-any.whl (56kB)
+    100% |################################| 61kB 4.9MB/s
 Installing collected packages: chardet, certifi, urllib3, idna, requests
-Successfully installed certifi-2017.7.27.1 chardet-3.0.4 idna-2.6 requests-2.18.4 urllib3-1.22
-
+Successfully installed certifi-2017.11.5 chardet-3.0.4 idna-2.6 requests-2.18.4 urllib3-1.22
+/usr/lib/python2.7/site-packages/pip-8.1.2-py2.7.egg/pip/_vendor/requests/packages/urllib3/util/ssl_.py:122: InsecurePlatformWarning: A true SSLContext object is not available. This prevents urllib3 from configuring SSL appropriately and may cause certain SSL connections to fail. You can upgrade to a newer version of Python to solve this. For more information, see https://urllib3.readthedocs.org/en/latest/security.html#insecureplatformwarning.
+You are using pip version 8.1.2, however version 9.0.1 is available.
+You should consider upgrading via the 'pip install --upgrade pip' command.
 [guestshell@guestshell ~]$
 ```
 
@@ -46,7 +64,7 @@ GigabitEthernet3       unassigned      YES NVRAM  administratively down down
 VirtualPortGroup0      192.168.35.1    YES NVRAM  up                    up
 ```
 
-We can also use python to build / configure our router and the validate the new configuration
+We can also use python to build / configure our router and the validate the new configuration, here we will create a new loopback interface. Add a description, IP address and subnet mask. We will then valite this new configuration. 
 
 ```
 >>> cli.configurep(["int loop100", "desc Python Loop", "ip add 192.168.0.1 255.255.255.0"])
