--- a/labs/python_at_the_edge/4.md
+++ b/labs/python_at_the_edge/4.md
@@ -1,13 +1,27 @@
 # Embedded Event Manager
 
-Embedded Event Manager (EEM) policies supports Python scripts. You can register Python scripts as EEM policies, and execute the registered 
-Python scripts when a corresponding event occurs. The EEM Python script has the same event specification syntax as the EEM TCL policy.
+Embedded Event Manager (EEM) policies supports Python scripts. You can register Python scripts as EEM policies, and execute the registered  Python scripts when a corresponding event occurs. The EEM Python script has the same event specification syntax as the EEM TCL policy.
 
 Configured EEM policies run within the Guest Shell. Guest Shell is a virtualized Linux-based environment, 
-designed to run custom Linux  applications, including Python for automated control and management of Cisco devices. 
+designed to run custom Linux applications, including Python for automated control and management of Cisco devices. 
 The Guest Shell container provides a Python interpreter.
 
-- Configure the event manager applet to run a Python script in response to the event
+
+## Python-Supported EEM Actions
+The Python package (is available only within the EEM script, and not available for the standard Python script) supports the following EEM actions:
+
+- Syslog message printing
+- Send SNMP traps
+- Reload the box
+- Switchover to the standby device
+- Run a policy
+- Track Object read
+- Track Object Set
+- Cisco Networking Services event generation
+
+- Configure the event manager applet to run a Python script in response to the event.
+
+Here we create an event called 'interface_Lo100_Shutdown' from the router command line to trigger an event. This then has a regular expression to perform the syslog message pattern match. We have to specify a directory to use for storing user library files or user-defined EEM policies. You must have a policy in the specified path. In the next step, the eem_script.py policy is available in the flash:/user_library folder or path. Then specify a regular expression pattern string that will match the next solicited prompt.
 
 ```
 device-xe(config)#event manager applet interface_Lo100_Shutdown
@@ -17,7 +31,7 @@ device-xe(config-applet)#action 1.0 cli command "guestshell run python /flash/ap
 device-xe(config-applet)#exit
 
 ```
-- Manually trigger the event from the CLI
+- Manually trigger the event from the CLI, but shutting down interface loopback 100 we build via the command line. 
 
 ```
 !Enable terminal monitor
@@ -30,6 +44,8 @@ device-xe(config)#int lo100
 device-xe(config-if)#shut
 
 ```
+Here the Python script eem_intf_up.py is triggered due to us shutting the loopback 100 interface being shutdown. The Python script will be executed and the interface will be 'no shut' and its state changed to up.
+
 ```
 *Dec 21 12:32:57.843: %LINEPROTO-5-UPDOWN: Line protocol on Interface Loopback100, changed state to down
 *Dec 21 12:32:57.843: %LINK-5-CHANGED: Interface Loopback100, changed state to administratively down
@@ -49,3 +65,7 @@ device-xe(config-if)#shut
 *Dec 21 20:45:01.541: %LINEPROTO-5-UPDOWN: Line protocol on Interface Loopback100, changed state to up
 *Dec 21 20:45:01.542: %LINK-3-UPDOWN: Interface Loopback100, changed state to 
 ```
+
+## Summing it up
+
+In this lab
