--- a/labs/python_at_the_edge/1.md
+++ b/labs/python_at_the_edge/1.md
@@ -36,7 +36,7 @@ The below table shows the Guest Shell capabilitiesand the supported Cisco platfo
 device-xe#guestshell enable virtualPortGroup 0 guest-ip 192.168.35.2 name-server 208.67.222.222
 ```
 
-2. “git” installed within GuestShell (if you enabled this in the Linux at the egde lab skip this or confirm git is installed with git --version)
+2. “git” installed within GuestShell (if you enabled this in the Linux at the egde lab skip this and confirm git is installed with git --version)
 ```
 [guestshell@guestshell ~]$ sudo yum install git
 Loaded plugins: fastestmirror
@@ -79,8 +79,16 @@ Installed:
 Complete!
 ```
 
-3. Code repo for lab cloned down
+3. Clone the code repo for lab
 
 ```
-git clone https://github.com/CiscoDevNet/app_hosting_code_samples
+[guestshell@guestshell ~]$ git clone https://github.com/CiscoDevNet/app_hosting_code_samples
+Cloning into 'app_hosting_code_samples'...
+remote: Counting objects: 445, done.
+remote: Total 445 (delta 0), reused 0 (delta 0), pack-reused 445
+Receiving objects: 100% (445/445), 120.74 KiB | 0 bytes/s, done.
+Resolving deltas: 100% (196/196), done.
+[guestshell@guestshell ~]$ ls
+app_hosting_code_samples
+
 ```
