updated python edge md mk2

--- a/labs/python_at_the_edge/4.md
+++ b/labs/python_at_the_edge/4.md
@@ -68,4 +68,7 @@ Here the Python script eem_intf_up.py is triggered due to us shutting the loopba
 
 ## Summing it up
 
-In this lab
+In this lab we looked at what was required to enable us to run python scripts within the GuestShell, how we can use the Python interpreter and some of the features within the Python interpreter. Within the Python interpreter how we look and confirm the routers configuration and even add new configurations. We looked at Zero-Touch Provisioning, which enables a device to retrieve configuration files from a remote DHCP server during initial deployment with no end-user intervention. Finally we configured Embedded Event Manager 
+(EEM) policies and saw the support Python scripts.
+
+
