updated python edge 1.md

--- a/labs/python_at_the_edge/1.md
+++ b/labs/python_at_the_edge/1.md
@@ -37,6 +37,8 @@ device-xe#guestshell enable virtualPortGroup 0 guest-ip 192.168.35.2 name-server
 ```
 
 2. “git” installed within GuestShell (if you enabled this in the Linux at the egde lab skip this and confirm git is installed with git --version)
+
+
 ```
 [guestshell@guestshell ~]$ sudo yum install git
 Loaded plugins: fastestmirror
@@ -79,7 +81,7 @@ Installed:
 Complete!
 ```
 
-3. Clone the code repo for lab
+3. Clone the code repo for the lab
 
 ```
 [guestshell@guestshell ~]$ git clone https://github.com/CiscoDevNet/app_hosting_code_samples
