--- a/labs/python_at_the_edge/1.md
+++ b/labs/python_at_the_edge/1.md
@@ -36,7 +36,7 @@ The below table shows the Guest Shell capabilitiesand the supported Cisco platfo
 device-xe#guestshell enable virtualPortGroup 0 guest-ip 192.168.35.2 name-server 208.67.222.222
 ```
 
-2. “git” installed within GuestShell (if you enabled this in the Linux at the egde lab skip this and confirm git is installed with git --version)
+2. “git” installed within GuestShell (if you enabled this in the Linux at the egde lab skip this and confirm git is installed with git version)
 
 
 ```
