updated python edge 1 and 2md

--- a/labs/python_at_the_edge/1.md
+++ b/labs/python_at_the_edge/1.md
@@ -15,7 +15,7 @@ Please ensure you have completed Linux at the Edge: Introduction to Guest Shell 
 
 ## Cisco Guest Shell Capabilities
 
-Guestshellis a virtualized Linux-based environment,designed to run custom Linux applications,including Python for automated control and management of Cisco devices.Using GuestShell, users can also install update,and operatethird-party Linux applications. Guest Shell containeris managed using IOx. IOx is Cisco's Application Hosting Infrastructure for Cisco IOSXE devices.IOx enables hosting of applications and services developed by Cisco, partners,and third-party developers in network edge devices.
+Guestshell is a virtualized Linux-based environment,designed to run custom Linux applications,including Python for automated control and management of Cisco devices.Using GuestShell, users can also install update,and operatethird-party Linux applications. Guest Shell containeris managed using IOx. IOx is Cisco's Application Hosting Infrastructure for Cisco IOSXE devices.IOx enables hosting of applications and services developed by Cisco, partners,and third-party developers in network edge devices.
 
 The below table shows the Guest Shell capabilitiesand the supported Cisco platforms
 
@@ -30,13 +30,13 @@ The below table shows the Guest Shell capabilitiesand the supported Cisco platfo
 
 ## Guest Shell Setup
 
-1. Guest Shell enabled and configured with DNS
+Setting up the GuestShell with guest-ip enabled and configured with DNS is done via the following from the routers command line, note this is done from Privileged EXEC mode and not global configuration mode. Here we shall use the Guestshell enable command, create a virtual port group (VPG) and added a DNS name-server. 
 
 ```
 device-xe#guestshell enable virtualPortGroup 0 guest-ip 192.168.35.2 name-server 208.67.222.222
 ```
 
-2. “git” installed within GuestShell (if you enabled this in the Linux at the egde lab skip this and confirm git is installed with git version)
+Next we can install “GIT” within GuestShell (if you enabled this in the Linux at the egde lab skip this and confirm git is installed with git version command)
 
 
 ```
@@ -80,8 +80,20 @@ Installed:
 
 Complete!
 ```
+If a package is already installed, when you try and installed this you will be prompted that this is already installed.
 
-3. Clone the code repo for the lab
+```
+[guestshell@guestshell ~]$ sudo yum install git
+Loaded plugins: fastestmirror
+Loading mirror speeds from cached hostfile
+ * base: mirrors.coreix.net
+ * extras: mirrors.coreix.net
+ * updates: mirrors.coreix.net
+Package git-1.8.3.1-12.el7_4.x86_64 already installed and latest version
+Nothing to do
+```
+
+Then, clone the code repo for the lab
 
 ```
 [guestshell@guestshell ~]$ git clone https://github.com/CiscoDevNet/app_hosting_code_samples
