--- a/labs/python_at_the_edge/2.md
+++ b/labs/python_at_the_edge/2.md
@@ -15,7 +15,7 @@ The following table defines the difference between 'On' and 'Off' box python.
 
 ## Interactive Python Prompt
 
-At enable prompt `guestshell run python`
+At the enable prompt run `guestshell run python` command and test the Python interpreter.
 
 ```
 device-xe#guestshell run python
@@ -28,7 +28,7 @@ hello world
 >>>
 ```
 
-- Run Python commands right on box
+Now lets run some Python. The Python interactive mode allows us to execute Python functions from the Cisco Python CLI module to configure the device. Here will have Python issue a 'show route' command.
 
 ```
 [guestshell@guestshell ~]$ python
