--- a/labs/cloud_to_fog/3.md
+++ b/labs/cloud_to_fog/3.md
@@ -1,36 +1,24 @@
-# Cisco IOx 
+# Cisco IOx
 
-Cisco IOx provides uniform and consistent hosting capabilities for fog applications across Cisco IoT network infrastructure. 
-The application environment brings together Cisco IOS software, the industry-leading networking operating system, and Linux, 
-the leading open-source platform. With Cisco IOx, your developers benefit from familiar processes and open-source tools prevalent 
-with Linux while generating applications that execute on Cisco IoT network infrastructure.
+Cisco IOx provides uniform and consistent hosting capabilities for fog applications across Cisco IoT network infrastructure. The application environment brings together Cisco IOS software, the industry-leading networking operating system, and Linux, the leading open-source platform. With Cisco IOx, developers benefit from familiar processes and open-source tools prevalent with Linux while generating applications that execute on Cisco IoT network infrastructure.
 
  ![](/posts/files/cloud_to_fog/images/cisco_iox.jpg)
 
 - Host applications and services at the network edge across different hardware platforms
 - A compute platform, application framework, and software development kit
-- Manage life cycle aspects of applications
+- Manage lifecycle aspects of applications
 
 ## UCS Express
 
-- Cisco UCS Blade server installed and running in router/switch
-UCS E-Series blade servers gives users the flexibility of running these applications on blade servers inside 
-Cisco ISR G2 series routers. This reduces the amount of space and power consumption by the traditional 
-server infrastructure and lowers the cost of deploying and managing applications at branch.
+- **Cisco UCS Blade server installed and running in router/switch** UCS E-Series blade servers gives users the flexibility of running these applications on blade servers inside Cisco ISR G2 series routers. This reduces the amount of space and power consumption by the traditional server infrastructure and lowers the cost of deploying and managing applications at branch.
 
-- Bare-metal or hypervisor operating systems supported
-Either deployment of bare-metal or hypervisor systems can be deployed. 
-Regardless of the platform being installed, you can install it on your server using one of the following methods. KVM console, PXE installation server
-or Host image mapping
+- **Bare-metal or hypervisor operating systems supported** Either deployment of bare-metal or hypervisor systems can be deployed. Regardless of which you install, you can install on your server using one of the following methods: KVM console, PXE installation server or Host image mapping.
 
-- Independent server management (from network)
-These servers operate independent of the ISR G2 router and communicate with the router through two internal network 
-interfaces; one L3 connection to router processor and one L2 connection to router multi-gigabit fabric backplane switch.
+- **Independent server management (from network)** These servers operate independent of the ISR G2 router and communicate with the router through two internal network interfaces; one L3 connection to router processor and one L2 connection to router multi-gigabit fabric backplane switch.
 
 
 ## Summing it up
 
-The Internet of Things (IoT) is driving business transformation by connecting everyday objects and devices to one another and to cloud-hosted services. In this lab, you began to looked at why you would run application within the network. How Fog computing is an extension of the traditional cloud-based computing model where implementations of the architecture can reside in multiple layers of a network’s topology.
-
+The Internet of Things (IoT) is driving business transformation by connecting everyday objects and devices to one another and to cloud-hosted services. In this lab, you began to look at why you would run application within the network. Fog computing is an extension of the traditional cloud-based computing model where implementations of the architecture can reside in multiple layers of a network’s topology.
 
 In the next lab we will look at how GuestShell is designed to run custom Linux applications, how you can enable this, and how you can installed applications including Python for automated control and how you can also update and operate third-party Linux applications on Cisco IOX-XE platforms.
